# sms_relay

./: .gitignore  CMakeLists.txt  README.md  main_poll.py
.github/workflows/: build.yml
config/: smsrelay.yaml
src/: __init__.py
src/comm/: __init__.py  at.py  monitor.py  serial.py
src/common/: app_config.h  config_loader.cpp  config_loader.h
src/common/ipc/: ipc_protocol.h  ipc_serialization.h
src/common/pdu/: pdu.cpp  pdu.h
src/pdu/: __init__.py  codec.py
src/sms/: __init__.py  processor.py
src/sms_relay/: main.cpp
src/sms_relay/at/: at_commands.h  at_session.cpp  at_session.h  command_queue.cpp  command_queue.h  dispatcher.cpp  dispatcher.h  response_builder.cpp  response_builder.h
src/sms_relay/callback/: callback_config.h  callback_result.h  callback_service.cpp  callback_service.h
src/sms_relay/forward/: forward_service.cpp  forward_service.h  forward_target.h  target_factory.h  template_renderer.cpp  template_renderer.h
src/sms_relay/forward/targets/: bark_target.cpp  bark_target.h
src/sms_relay/http/: http_client.cpp  http_client.h  https_client.h
src/sms_relay/ipc/: ipc_server.cpp  ipc_server.h
src/sms_relay/sms/: incoming_sms.h  sms_service.cpp  sms_service.h
src/sms_relay/transport/: itransport.h  line_parser.h  ring_buffer.h  serial_config.h  serial_transport.cpp  serial_transport.h  urc_dispatcher.h
src/sms_relay_cli/: interactive_shell.cpp  interactive_shell.h  main.cpp
src/sms_relay_cli/ipc/: ipc_client.cpp  ipc_client.h
